﻿-- 0.667 --
* Improved multiple hublist support (thanks garg)
* Fixed some favdirs issues (thanks naga)
* Fixed a status logging issue (thanks naga)
* Fixed annoying login issue

-- 0.666 2004-11-03 --
* [bug 173] Fixed copy nick to clipboard (thanks trem)
* Removed some old code (thanks garg)
* Added tth to log codes (thanks garg)
* Added # of locally filtered results to search frame (thanks garg)
* Fixed a crash in the upnp code
* Fixed wide formatting of time (thanks garg)
* Added local filtering of searches with "-" in front of the search term (thanks cologic) [bug 166]
* Fixed a missing hubframe stats bug (thanks trem)
* TTH's are now correctly searched for in search spy (thanks trem) [bug 87]
* Fixed an issue with utf8 user commands (thanks trem)
* Moved to a less intrusive build procedure where stlport and wtl are local to the
  DC++ build (see compile.txt)
* Added /log to show log for current hub / user (thanks garg)
* More internationalization (thanks garg)
* Updated some template code (thanks farcry)
* Extended log command (thanks ullner)
* Fixed issue with utf-8 nicks during login to some hubs (thanks garg) [bug 212]
* Fixed issue with utf-8 time formatting for certain languages in certain locales
* Removed search optimisation obsoleted by tth's and bloom filters (those of
  you with a large number of files in your share, post on the forum if you notice
  any big increase in CPU usage)
* Added option not to download files already in share (by TTH) (thanks TPO) [bug 69]
* Help file work (garg, ullner)
* Added petabytes (PiB) (thanks garg)
* Clicking on active tab will deactivate it (thanks garg)
* Fixed an issue with loading invalid virtual names when upgrading (thanks garg) [bug 227]
* Fixed another issue with user commands (thanks garg)
* Updated to WTL 7.5.4291
* Hopefully fixed a few issues with w9x and Unicode [bug 183]
* Fixed common control initialization
* Unix makefile now generates a shared lib (thanks jeremy huddleston)