@@ -232,37 +232,38 @@ BEGIN
     EDITTEXT        IDC_PROXY,14,192,247,14,ES_AUTOHSCROLL
 END
 
-IDD_UPLOADPAGE DIALOGEX 0, 0, 275, 225
+IDD_UPLOADPAGE DIALOGEX 0, 0, 275, 239
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 EXSTYLE WS_EX_ACCEPTFILES | WS_EX_STATICEDGE
 CAPTION "Sharing"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Shared directories",IDC_SETTINGS_SHARED_DIRECTORIES,7,7,
-                    261,179
+                    261,190
     CONTROL         "List1",IDC_DIRECTORIES,"SysListView32",LVS_REPORT | 
                     LVS_SHOWSELALWAYS | LVS_NOSORTHEADER | WS_BORDER | 
                     WS_TABSTOP,14,17,247,132,WS_EX_ACCEPTFILES
     LTEXT           "Total size:",IDC_SETTINGS_SHARE_SIZE,14,170,33,8
     LTEXT           "0 B",IDC_TOTAL,50,170,41,8
     CONTROL         "Share hidden files",IDC_SHAREHIDDEN,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,93,169,72,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,14,181,72,10
     PUSHBUTTON      "&Remove",IDC_REMOVE,167,166,44,14,WS_DISABLED
     PUSHBUTTON      "&Add  folder",IDC_ADD,215,166,46,14
     RTEXT           "Automatically open an extra slot if speed is below (0 = disable)",
-                    IDC_SETTINGS_UPLOADS_MIN_SPEED,7,192,208,8
-    EDITTEXT        IDC_MIN_UPLOAD_SPEED,219,189,28,14,ES_AUTOHSCROLL
+                    IDC_SETTINGS_UPLOADS_MIN_SPEED,7,206,208,8
+    EDITTEXT        IDC_MIN_UPLOAD_SPEED,219,202,28,14,ES_AUTOHSCROLL
     CONTROL         "Spin1",IDC_MIN_UPLOAD_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,247,188,14,14
-    LTEXT           "kiB/s",IDC_SETTINGS_KBPS,249,192,19,8
-    RTEXT           "Upload slots",IDC_SETTINGS_UPLOADS_SLOTS,7,207,208,8
-    EDITTEXT        IDC_SLOTS,219,204,28,14,ES_NUMBER
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,247,202,14,14
+    LTEXT           "kiB/s",IDC_SETTINGS_KBPS,249,206,19,8
+    RTEXT           "Upload slots",IDC_SETTINGS_UPLOADS_SLOTS,7,220,208,8
+    EDITTEXT        IDC_SLOTS,219,218,28,14,ES_NUMBER
     CONTROL         "Spin1",IDC_SLOTSPIN,"msctls_updown32",UDS_SETBUDDYINT | 
                     UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | 
-                    UDS_NOTHOUSANDS,247,204,14,14
+                    UDS_NOTHOUSANDS,247,218,14,14
     LTEXT           "Note; New files are added to the share only when they've been hashed!",
                     IDC_SETTINGS_ONLY_HASHED,14,154,226,8
+    PUSHBUTTON      "&Rename",IDC_RENAME,119,166,44,14,WS_DISABLED
 END
 
 IDD_APPEARANCEPAGE DIALOGEX 0, 0, 275, 225
