@@ -184,11 +184,20 @@ string Util::validateMessage(string tmp, bool reverse, bool checkNewLines) {
 	return tmp;
 }
 
+#ifdef _WIN32
 static const char badChars[] = { 
 	1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16,
-		17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30,
-		31, '<', '>', '/', '"', '|', '?', '*', 0
+	17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30,
+	31, '<', '>', '/', '"', '|', '?', '*', 0
 };
+#else
+
+static const char badChars[] = { 
+	1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16,
+	17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30,
+	31, '<', '>', '\\', '"', '|', '?', '*', 0
+};
+#endif
 
 /**
  * Replaces all strange characters in a file with '_'
@@ -881,6 +890,6 @@ int Util::getOsMinor()
 }
 /**
  * @file
- * $Id: Util.cpp,v 1.75 2004/11/02 10:43:08 arnetheduck Exp $
+ * $Id: Util.cpp,v 1.76 2004/11/07 17:04:28 arnetheduck Exp $
  */
 
