@@ -31,6 +31,9 @@ choose to let it display, or let hashing continue in the background.<br>
   <dd>Share files with the Hidden attribute set and files inside
 directorie with the Hidden attribute set.<br>
   </dd>
+  <dt>Rename</dt>
+  <dd>Change the virtual name on a shared folder. Note: the client will
+  apear to freeze when you exit settings, this is due to a refresh of the filelist.</dd>
 </dl>
 <dl>
   <dt>Automatically Open an Extra Slot if Speed is Below ...</dt>
